--- a/public/index.html
+++ b/public/index.html
@@ -30,14 +30,14 @@
     <div id="root">
       <header>
   <div id="brand">
-    <a class="icon-link" href="https://zmta.vercel.app/">
+    <a class="icon-link" href="https://www.zmt.ac.cn/">
       <img
         class="icon"
         src="/images/brandIcon.svg"
       />
     </a>
     <div class="text">
-      <a href="https://zmta.vercel.app/"><h1>ZMT</h1></a>
+      <a href="https://www.zmt.ac.cn/"><h1>ZMT</h1></a>
       <h3>Description about Blog Author</h3>
     </div>
   </div>
@@ -73,7 +73,7 @@
 		
 		
 			<article class="summary">
-  <a href="https://zmta.vercel.app/posts/hello/">
+  <a href="https://www.zmt.ac.cn/posts/hello/">
     <h1 class="title">Hello</h1>
     
   </a>
@@ -148,7 +148,7 @@
   
   <p class="copyright">
     Copyright © 2024
-    <a href="https://zmta.vercel.app/"><strong>Blog Author</strong></a>.
+    <a href="https://www.zmt.ac.cn/"><strong>Blog Author</strong></a>.
     This work is licensed under the
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> license.
   </p>
