--- a/public/404.html
+++ b/public/404.html
@@ -88,7 +88,7 @@
         <a href="https://gitlab.com/ian-s-mcb">GitLab</a>
       
          | 
-        <a href="https://quizlet.com/ian-s-mcb">Quizlet</a>
+        <a href="https://quizlet.com/zmtar">Quizlet</a>
       
          | 
         <a href="https://www.reddit.com/user/ian-s-mcb">Reddit</a>
