--- a/public/about/index.html
+++ b/public/about/index.html
@@ -104,7 +104,7 @@
         <a href="https://github.com/zmtn">GitHub</a>
       
          | 
-        <a href="likui@zmt.ac.cn">Email</a>
+        <a href="mailto:likui@zmt.ac.cn">Email</a>
       
          | 
         <a href="https://quizlet.com/zmtar">Quizlet</a>
