--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
     content=""
   />
   
+  <script type="module">
+	import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+	mermaid.initialize({ startOnLoad: true });
+  </script>
+
+  
     
       <title>ZMT</title>
     
