--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
     
     
   </strong>
- <span> • 545 words</span>
+ <span> • 547 words</span>
  <span> • 3 minute read</span>
   
 </div>
@@ -258,6 +258,19 @@
 
       </div>
       <footer>
+  <script>
+	  document.addEventListener('DOMContentLoaded', function() {
+		const mermaidBlocks = document.querySelectorAll('pre code.language-mermaid');
+		mermaidBlocks.forEach(block => {
+		  const wrapper = document.createElement('div');
+		  wrapper.classList.add('mermaid');
+		  wrapper.innerHTML = block.textContent;
+		  block.parentNode.replaceWith(wrapper);
+		});
+		mermaid.initialize({ startOnLoad: true });
+	  });
+  </script>
+
   <hr />
   
     <p id="social">
