--- a/public/index.html
+++ b/public/index.html
@@ -107,6 +107,12 @@
  <span> • 1 words</span>
  <span> • 1 minute read</span>
   
+    <div>
+      <span>Tags:</span>
+      
+        <a href="/tags/embedded">Embedded</a>
+    </div>
+  
 </div>
 
   <div class="content">
